@@ -1,3 +1,6 @@
+# let GCC auto detect whether it (sh/c)ould output its messages in color
+export GCC_COLORS=auto
+
 SUBDIRS = src gfx po debian doc win32
 
 DISTCLEANFILES =		\
